# tools_codex

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
codex/: codex.bzl  defs.bzl  repositories.bzl
codex/private/: extensions.bzl  repo.bzl  toolchain.bzl
